--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
                 <div class="mastfoot">
                     <div class="inner">
-                        <p>Made by <a href="https://github.com/IvanNyrkov">Ivan Nyrkov</a></p>
+                        <p>Made by <a href="https://github.com/nrkv">Ivan Nyrkov</a></p>
                     </div>
                 </div>
 
